# FarhanDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
icons/: farhandb.res
include/index/: btree.h
include/query/: catalog.h  executor.h  lexer.h  optimizer.h  parser.h
include/server/: server.h
include/storage/: buffer_pool.h  disk_manager.h  page.h  wal.h
include/transaction/: lock_manager.h  transaction_manager.h
src/: main.cpp
src/bridge/: DBBridge.cpp  DBBridge.h
src/index/: btree.cpp
src/query/: catalog.cpp  executor.cpp  lexer.cpp  optimizer.cpp  parser.cpp
src/server/: server.cpp
src/storage/: buffer_pool.cpp  disk_manager.cpp  page.cpp  wal.cpp
src/transaction/: lock_manager.cpp  transaction_manager.cpp
src/ui/: MainWindow.cpp  MainWindow.h  ResultTable.cpp  ResultTable.h  SidePanel.cpp  SidePanel.h  SqlEditor.cpp  SqlEditor.h
styles/: dark.qss  light.qss
